Implemented change 24/7/30 price
